2011-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/display/disp_hcms29xx.c, libchip/flash/am29lv160.c,
	libchip/i2c/i2c-2b-eeprom.c, libchip/i2c/i2c-ds1621.c,
	libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-fram-fm25l256.c,
	libchip/i2c/spi-memdrv.c, libchip/rtc/ds1375.c: Eliminate use of GNU
	old-style field designator extension as recommended by clang.

2011-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/i2c/spi-memdrv.h: Add missing semi-colon.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* aclocal/bspopts.m4: Added macros for cache options
	RTEMS_BSPOPTS_SET_DATA_CACHE_ENABLED,
	RTEMS_BSPOPTS_HELP_DATA_CACHE_ENABLED,
	RTEMS_BSPOPTS_SET_INSTRUCTION_CACHE_ENABLED, and
	RTEMS_BSPOPTS_HELP_INSTRUCTION_CACHE_ENABLED.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1729/cpukit
	* aclocal/check-smp.m4, aclocal/enable-smp.m4: New files.

2011-03-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4: Add pkgdatadir.
	* configure.ac: Remove dead code.

2011-03-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4, aclocal/version.m4:
	Rename RTEMS_API into _RTEMS_API.

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4:
	Stop pretending no_cpu* was buildable.
	Derive RTEMS_CPU from "$host_cpu".
	Error out if "$host" doesn't match "*-*-rtems*".

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove AM_CONDITIONAL(HAS_POSIX) (Unused).

2011-02-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada-tests/mptests/mp01/mp01.adb, ada-tests/mptests/mp01/mptest.adb,
	ada-tests/mptests/mp01/mptest.ads,
	ada-tests/mptests/mp01/node1/mp01_node1.adb,
	ada-tests/mptests/mp01/node2/mp01_node2.adb,
	ada-tests/mptests/mp02/mptest.adb, ada-tests/mptests/mp02/mptest.ads,
	ada-tests/mptests/mp02/node1/mp02_node1.adb,
	ada-tests/mptests/mp02/node2/mp02_node2.adb,
	ada-tests/mptests/mp03/mptest.adb, ada-tests/mptests/mp03/mptest.ads,